# tanstaafl autoconf script

AC_INIT(tanstaafl.cc)
AM_INIT_AUTOMAKE(tanstaafl, 0.0.4)

AC_PROG_AWK
AC_PROG_CC
AC_PROG_CXX
AC_PROG_CPP
AC_PROG_LN_S
AC_PROG_MAKE_SET

AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h limits.h malloc.h sgtty.h strings.h sys/file.h sys/ioctl.h sys/time.h termio.h unistd.h)
# AC_CHECK_LIB(ui, sighandler,, [ echo -e "\nYou must have the libui installed on your system for this to work.\n" ; exit 1 ])

AC_C_CONST
AC_TYPE_UID_T
AC_C_INLINE
AC_TYPE_MODE_T
AC_TYPE_SIZE_T
AC_STRUCT_TM

AC_PROG_GCC_TRADITIONAL
AC_FUNC_MEMCMP
AC_FUNC_MMAP
AC_TYPE_SIGNAL
AC_FUNC_UTIME_NULL
AC_CHECK_FUNCS(ftime getcwd mkdir mktime regcomp select socket strdup strstr strtol uname)

AC_ARG_WITH(mailer,
  [  --with-mailer           Choose mailer (you *must* choose one mailer)],
   [case "${withval}" in
     ip) mailer=ip ;; 
     modem) mailer=modem ;;
     external) mailer=external ;;
     *) AC_MSG_ERROR(bad value ${withval} for --with-mailer) ;;
   esac],[mailer=none])
AM_CONDITIONAL(IP, test x$mailer = xip)
AM_CONDITIONAL(MODEM, test x$mailer = xmodem)
AM_CONDITIONAL(EXTERNAL, test x$mailer = xexternal)

AC_SUBST(EXTRA_DEFS)
AC_SUBST(EXTRA_SOURCES)

AM_CONFIG_HEADER(config.h)
AC_OUTPUT(Makefile)

echo -e "\nNow you're ready to compile. Just enter 'make'.\n"
